src-ken&y/objects/Supplier_Payment_Line__c.object
<CustomObject>
    <customHelpPage>HelpSupplierPayments</customHelpPage>
    <description>Payment details associated with a payment received or issued</description>
    <fields>
        <fullName>Amount_To_Apply__c</fullName>
        <description>Amount To Apply for the invoice</description>
        <label>DEPRECATED</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount to paid or credited during this transaction</description>
        <label>Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Applied__c</fullName>
        <description>Indicates the credit amount applied</description>
        <label>Credit Amount Applied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Number__c</fullName>
        <description>Credit Memo Number</description>
        <label>DEPRECATED</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Memo</label>
        <referenceTo>Supplier_Invoice__c</referenceTo>
        <relationshipName>Supplier_Payment_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Transaction Currency for this record.</description>
        <formula>Supplier_Payment__r.Currency__r.ISO_Code__c</formula>
        <inlineHelpText>Supplier Payment Currency</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Settled__c</fullName>
        <description>Date when this deduction was settled.</description>
        <inlineHelpText>For deductions; the settlement date.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_to_Pay__c</fullName>
        <formula>Supplier_Payment__r.Date_Paid__c - Supplier_Invoice__r.Date_Invoiced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduction_Code__c</fullName>
        <description>Deduction code as transmitted</description>
        <label>DEPRECATED</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Detail__c</fullName>
        <description>Describes the details of the exception</description>
        <label>DEPRECATED</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flagged when there&apos;s an exception with this payment information</description>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_1099__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to exclude a Supplier Payment from being included in the 1099 calculation.</description>
        <label>Exclude from 1099</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <formula>Supplier_Payment__r.Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Supplier_Payment__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line Number for the payment. (Added for Del Monte Demo Purpose.)</description>
        <label>DEPRECATED</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes related to Payment</description>
        <label>DEPRECATED</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Settled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this payment of type deduction has been settled.</description>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Invoice</label>
        <referenceTo>Supplier_Invoice__c</referenceTo>
        <relationshipLabel>Supplier Payment Lines (Supplier Invoice)</relationshipLabel>
        <relationshipName>Supplier_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Payment__c</fullName>
        <label>Supplier Payment</label>
        <referenceTo>Supplier_Payment__c</referenceTo>
        <relationshipName>Supplier_Payment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <formula>Supplier_Invoice__r.Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency</description>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field identifies what type of payment detail this entry is.  Payments and deductions offset open invoices.  Credit memos reduce the overall amount paid.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Unearned Terms Discount</fullName>
                </value>
                <value>
                    <fullName>Earned Terms Discount</fullName>
                </value>
                <value>
                    <fullName>Writeoff</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>                
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1099_Box_G__c</fullName>
        <label>1099 Box</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X1099_Box</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1099_Box__c</fullName>
        <description>The amount of this line if it is a payment will be summarized on a Supplier 1099 based on the box selected.</description>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Rents</fullName>
                </value>
                <value>
                    <fullName>2 Royalties</fullName>
                </value>
                <value>
                    <fullName>3 Other Income</fullName>
                </value>
                <value>
                    <fullName>4 Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 Medical</fullName>
                </value>
                <value>
                    <fullName>7 Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 Substitute Payments</fullName>
                </value>
                <value>
                    <fullName>9 Payer Direct Sales</fullName>
                </value>
                <value>
                    <fullName>10 Crop Insurance</fullName>
                </value>
                <value>
                    <fullName>13 Excess golden parachute</fullName>
                </value>
                <value>
                    <fullName>14 Gross proceeds to Attorney</fullName>
                </value>
                <value>
                    <fullName>15a Section 409A Deferrals</fullName>
                </value>
                <value>
                    <fullName>15b Section 409A Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1099_Relevant__c</fullName>
        <formula>Supplier_Invoice__r.Supplier__r.X1099_Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1099 Reportable</label>
        <type>Checkbox</type>
    </fields>
    <label>Supplier Payment Line</label>
    <nameField>
        <label>Supplier Payment Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Payment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>x1099_Box_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>if( Not(ISPICKVAL(Type__c,&quot;Earned Terms Discount&quot;)) &amp;&amp; X1099_Relevant__c &amp;&amp;  ISPICKVAL(X1099_Box_G__c ,&quot;&quot;)
,true, false)</errorConditionFormula>
        <errorDisplayField>X1099_Box_G__c</errorDisplayField>
        <errorMessage>You must select a 1099 Box value for a 1099 reportable payment line.</errorMessage>
    </validationRules>
</CustomObject>